Many formatting improvements accross the site, fixed jump links, adjusted margins, updated article URLs and video links, changed navigation labels for clarity.

--- a/explore.html
+++ b/explore.html
@@ -110,11 +110,11 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
-				<li class="active"><a href="explore.html">e𝕏P Web3™</a></li>
+				<li class="active"><a href="explore.html">Explore</a></li>
 				<li><a href="community.html">Community</a></li>
-				<li><a href="pages/livestream.html">Livestream</a></li>
+				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
 				<li><a href="ofidkid.html">The OFiD Kid</a></li>
-				<li><a href="pages/about.html">About Us</a></li>
+				<li><a href="pages/about.html">About</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -314,10 +314,10 @@
 							<header>
 								<span class="date">October 21, 2024</span>
 								<h2><a
-										href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers">03
+										href="https://ofidcrypt.ca/ep-learntm-crypto-101-fundamentals-breaking-barriers">03
 										Crypto 101:<br /> Fundamentals</a></h2>
 							</header>
-							<a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers"
+							<a href="https://ofidcrypt.ca/ep-learntm-crypto-101-fundamentals-breaking-barriers"
 								class="image fit"><img src="assets/images/article-cover-03-crypto101.jpg"
 									alt="Article Title: Crypto 101: Fundamentals & Breaking Barriers" /></a>
 							<p>In the Crypto 101 Series, learn about what keeps people cautious about crypto, and how
@@ -326,7 +326,7 @@
 								how it compares to
 								current financial systems, there really should be no barriers left to hold you back.</p>
 							<ul class="actions special">
-								<li><a href="https://pennypost.co/p/816005386/03-crypto-101-fundamentals--breaking-barriers"
+								<li><a href="https://ofidcrypt.ca/ep-learntm-crypto-101-fundamentals-breaking-barriers"
 										class="button">View Article</a></li>
 							</ul>
 						</article>
