--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="explore.html">e𝕏P Web3™</a></li>
+							<li><a href="explore.html">Explore</a></li>
 							<li><a href="community.html">Community</a></li>
-							<li><a href="pages/livestream.html">Livestream</a></li>
+							<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
 							<li><a href="ofidkid.html">The OFiD Kid</a></li>
-							<li><a href="pages/about.html">About Us</a></li>
+							<li><a href="pages/about.html">About</a></li>
 						</ul>
 						<ul class="icons">
 							<li>
@@ -204,7 +204,7 @@
 											<h3 class="quick-start-title">Grow Your Audience</h3>
 											<p class="align-center">Flex Rates · Reward Users · e𝕏PB Easy Pay · <b>Coming Soon</b></p> <button
 												class="round-button"><a
-													href="https://www.tiktok.com/@ofidkid/video/7483978367784602886?is_from_webapp=1&sender_device=pc&web_id=7468541086673110533">See
+													href="https://www.instagram.com/p/DHhzEAXR5y7/">See
 													Trailer</a></button>
 										</div>
 								</article>
