--- a/ofidkid.html
+++ b/ofidkid.html
@@ -103,11 +103,11 @@
 		<nav id="nav">
 			<ul class="links">
 				<li ><a href="index.html">Home</a></li>
-				<li><a href="explore.html">e𝕏P Web3™</a></li>
+				<li><a href="explore.html">Explore</a></li>
 				<li><a href="community.html">Community</a></li>
-				<li><a href="pages/livestream.html">Livestream</a></li>
+				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
 				<li class="active"><a href="ofidkid.html">The OFiD Kid</a></li>
-				<li><a href="pages/about.html">About Us</a></li>
+				<li><a href="pages/about.html">About</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -212,7 +212,7 @@
 							<!-- Section 1 - Left Image -->
 							<span class="image left" id="baby-tokin"><img src="assets/images/baby-tokin.png"
 									alt="OFiD Crew Baby Tokin"></span>
-							<h2 style="text-align: left;">The OFiD Kid: Baby Tokin</h2>
+									<h2 class="no-top-margin" style="text-align: left;">The OFiD Kid: Baby Tokin</h2>
 							<p>Baby Tokin is the adventurous, joyous heart of the OFiD Crew, spreading happiness with every laugh and
 								milestone.
 								A
@@ -241,7 +241,7 @@
 						<div class="product-content">
 							<span class="image right" id="giddy"><img src="assets/images/ofidkid-giddy-01.jpg"
 									alt="OFiD Crew Giddy Character"></span>
-							<h2 style="text-align: right;">Meet the Crew: Giddy</h2>
+									<h2 class="no-top-margin" style="text-align: right;">Meet the Crew: Giddy</h2>
 							<p>Giddy is the fun-loving, happy-go-lucky member of the OFiD Crew, bringing joy and excitement wherever she
 								goes.
 								Adorned in vibrant shades of purple, pink, and teal, Giddy is a burst of color and energy. She is never
@@ -273,7 +273,7 @@
 						<div class="product-content">
 							<span class="image left" id="buster"><img src="assets/images/ofidkid-buster-bouncer-02.jpg"
 									alt="OFiD Crew Buster Character"></span>
-							<h2 style="text-align: left;">Buster the Bouncer</h2>
+									<h2 class="no-top-margin" style="text-align: left;">Buster the Bouncer</h2>
 							<p>Buster is the rugged bouncer of the OFiD Crew, known for his tough exterior and heart of gold. With a
 								striking teal
 								and purple colors, Buster stands out in any crowd. He dons a leather jacket that adds to his tough
@@ -301,7 +301,7 @@
 						<div class="product-content">
 							<span class="image right" id="rex"><img src="assets/images/ofidkid-rex-01.jpg"
 									alt="OFiD Crew Rex Character"></span>
-							<h2 style="text-align: right;">Meet the Crew: Rex</h2>
+									<h2 class="no-top-margin" style="text-align: right;">Meet the Crew: Rex</h2>
 							<p>Rex is the cute and shy member of the OFiD Crew, always wearing his denim vest and glasses. With this
 								look and his
 								short, soft fur and striking red color, he is often seen as a stern and serious figure! Though
