--- a/pages/about.html
+++ b/pages/about.html
@@ -108,11 +108,11 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="../index.html">Home</a></li>
-				<li><a href="../explore.html">e𝕏P Web3™</a></li>
+				<li><a href="../explore.html">Explore</a></li>
 				<li><a href="../community.html">Community</a></li>
-				<li><a href="livestream.html">Livestream</a></li>
+				<li><a href="livestream.html">e𝕏P Streams™</a></li>
 				<li><a href="../ofidkid.html">The OFiD Kid</a></li>
-				<li class="active"><a href="about.html">About Us</a></li>
+				<li class="active"><a href="about.html">About</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -206,23 +206,13 @@
 										alt="e𝕏P Web3™ Logo"></span>
 							</a>
 							<h3 style="text-align: right;">Leading Partner Collaborations</h3>
-							<p>By partnering with leading Web3 software developers, our company can subtly introduce
-								people to the
-								nuances of
-								blockchain technology. Through everyday applications that integrate this advanced
-								technology, users can
-								experience
-								its benefits without having to navigate the complexities of crypto and trading. This
-								approach ensures
-								that
-								businesses and individuals stay at the forefront of technological advancement. We
-								support other
-								developers'
-								software, helping businesses find tailored Web3 solutions. Additionally, we introduce
-								users to wallet
-								apps, enabling
-								them to explore and manage their own digital portfolios with ease.</p>
-						</div>
+							<p>By partnering with leading Web3 software developers, our company subtly introduces people to blockchain technology's
+								nuances. Everyday applications integrating blockchain let users experience its benefits without navigating crypto
+								and trading complexities. This approach keeps businesses and individuals at the forefront of technological
+								advancement. We support other developers' software, helping businesses grow their audience through our like-minded
+								community. Additionally, we guide users to wallet apps, enabling easy exploration and management of their digital
+								portfolios.</p>
+							</div>
 					</div>
 				</article>
 
