--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -105,11 +105,11 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="../index.html">Home</a></li>
-				<li><a href="../explore.html">e𝕏P Web3™</a></li>
+				<li><a href="../explore.html">Explore</a></li>
 				<li><a href="../community.html">Community</a></li>
 				<li class="active"><a href="livestream.html">e𝕏P Streams™</a></li>
 				<li><a href="../ofidkid.html">The OFiD Kid</a></li>
-				<li><a href="about.html">About Us</a></li>
+				<li><a href="about.html">About</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
@@ -249,9 +249,6 @@
 													26, 2025</a>
 											</blockquote>
 											<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-											<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-											<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-											<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 										</div>
 										<p id="event-1-desc">Join us to learn more about what we do! Explore Web3 apps for business and
 											social utility, and get rewarded with e𝕏P
@@ -279,7 +276,7 @@
 									<article>
 										<header class="large-href">
 											<span class="date">EXP-001 e𝕏P WEB3™<br />
-												<a href="#event-1-desc">More Details</a></span>
+												<a href="#event-2-desc">More Details</a></span>
 				
 											<h1><a href="#table-event-2">Intro: OFiDCrypt &<br />
 													e𝕏PB Bouncy Ball</a></h1>
@@ -293,11 +290,8 @@
 													29, 2025</a>
 											</blockquote>
 											<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-											<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-											<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-											<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 										</div>
-										<p id="event-1-desc">Join us to learn more about what we do! Explore Web3 apps for business and
+										<p id="event-2-desc">Join us to learn more about what we do! Explore Web3 apps for business and
 											social utility, and get rewarded with e𝕏P
 											Web3™. Participate in our contests, and earn rewards by trying out Web3 products from
 											leading partners. Don't miss
@@ -323,14 +317,14 @@
 									<article>
 										<header class="large-href">
 											<span class="date">PDA-001 Perk Digital Art<br />
-												<a href="#event-2-desc">More Details</a></span>
+												<a href="#event-3-desc">More Details</a></span>
 				
 											<h1><a href="#table-event-3">Perk<br />
 													Digital Art</a></h1>
 										</header>
 										<a href="#" class="image fit"><img src="../assets/images/picgif01.gif"
 												alt="Featured Art Thumbnail"></a>
-										<p id="event-2-desc">Announced in late September, the event invites participants to purchase
+										<p id="event-3-desc">Announced in late September, the event invites participants to purchase
 											featured digital art for as little as $0.25 USD of Kin. Simply visit the store by
 											clicking the button below, make your purchase and receive a free entry for the live draw!
 											You can join the upcoming 𝕏 Livestream where the winners will be chosen. The event
