--- a/kincommunity.html
+++ b/kincommunity.html
@@ -106,11 +106,11 @@
 		<nav id="nav">
 			<ul class="links">
 				<li><a href="index.html">Home</a></li>
-				<li><a href="explore.html">e𝕏P Web3™</a></li>
+				<li><a href="explore.html">Explore</a></li>
 				<li><a href="community.html">Community</a></li>
-				<li><a href="pages/livestream.html">Livestream</a></li>
+				<li><a href="pages/livestream.html">e𝕏P Streams™</a></li>
 				<li><a href="ofidkid.html">The OFiD Kid</a></li>
-				<li><a href="pages/about.html">About Us</a></li>
+				<li><a href="pages/about.html">About</a></li>
 			</ul>
 			<ul class="icons">
 				<li>
