Added featured explore page with link and section tags for redeem rewards instructions.

--- a/explore.html
+++ b/explore.html
@@ -171,10 +171,10 @@
 				<!-- Quick Start Section -->
 				<section class="quick-start-section">
 					<header>
-						<h2>Featured App</h2>
+						<h2>Rewards Featured</h2>
 
 						<p>With our uniquie App Discovery Model, you can <b>Earn Rewards</b> by getting started with
-							featured apps, coming soon to OFiDCrypt!</p>
+							featured apps!</p>
 					</header>
 
 					<!-- Quick Start: Featured -->
@@ -182,8 +182,8 @@
 								src="/assets/images/hvr-logo03.png" alt="Hvr Logo"></span>
 						<div class="quick-start-content">
 							<h3 class="quick-start-title">Hvr Browser</h3>
-							<p class="align-center">By Hvr Technologies Inc</p> <button class="round-button"><a
-									href="https://hvr.world/">Get Hvr</a></button>
+							<p class="align-center">Rewards Promotion LIVE</p> <button class="round-button"><a
+									href="https://www.ofidcrypt.com/explore/app-featured-hvr.html#explore-featured">Try Hvr</a></button>
 						</div>
 					</article>
 
