Updated formatting and spacing on community, kincommunity and ofidkid.html.

--- a/kincommunity.html
+++ b/kincommunity.html
@@ -167,29 +167,36 @@
 								</a>
 							</div>
 						</section>
-
+				
 				</section>
 				<tbody>
 					<tr>
-						<td>Join on <b>Flipchat</b> <br />
-							Room <a href="https://app.flipchat.xyz/room/32"><b>#32</b></a></td>
-						<td><a href="https://apps.apple.com/ca/app/flipchat-messenger/id6738328834">Get for
-								iOS</a><br />
-							<a
-								href="https://play.google.com/store/apps/details?id=xyz.flipchat.app&pcampaignid=web_share">Get
-								for
-								Android</a>
+					<tr>
+						<td style="text-align: center; vertical-align: middle;">
+							<a href="https://app.flipchat.xyz/room/32">
+								<img src="/assets/images/social-logo/IMG_1884 (1).png" alt="Flipchat Logo"
+									style="max-width: 35%; height: auto; display: block; margin: auto;">
+							</a>
+						</td>
+						<td style="text-align: center; vertical-align: middle;">
+							<a href="https://app.flipchat.xyz/room/32">Room #32</a>
 						</td>
 					</tr>
+					</tr>
 					<tr>
-						<td>Follow on <br />
-							<b>𝕏</b>
+						<td style="text-align: center; vertical-align: middle;">
+							<a href="https://x.com/Kin_Ecosystem">
+								<img src="/assets/images/social-logo/IMG_1844.png" alt="X Logo"
+									style="max-width: 35%; height: auto; display: block; margin: auto;">
+							</a>
 						</td>
-						<td><a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a></td>
+						<td style="text-align: center; vertical-align: middle;">
+							<a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a>
+						</td>
 					</tr>
 				</tbody>
 				</table>
-			</section>
+				</section>
 
 			<!-- More About Our Partners -->
 			<h2 style="text-align: center;">More Ways to Engage</h2>
