--- a/ofidkid.html
+++ b/ofidkid.html
@@ -149,14 +149,33 @@
 							adventures!</p>
 				</header>
 
-				<!-- Ad Banner -->
-				<section id="ofid-bouncer" class="ad-banner">
-					<div style="text-align: center;">
-						<a href="https://x.com/OFiDKid" style="border-bottom: none;">
-							<img src="/assets/images/ofidkid-crew-banner-01.jpg" alt="Ad Banner" style="max-width: 100%; height: auto;">
-						</a>
-					</div>
-				</section>
+			<!-- Community Links Table -->
+			<section class="community-links">
+				<table>
+					<!-- Ad Banner -->
+					<section id="expb-ball" class="ad-banner">
+						<div style="text-align: center;">
+							<!-- <a href="#" style="border-bottom: none;"> -->
+							<img src="/assets/images/ofidkid-crew-banner-01.jpg" alt="Ad Banner"
+								style="max-width: 100%; height: auto;">
+							</a>
+						</div>
+					</section>
+					<tbody>
+						<tr>
+							<td style="text-align: center; vertical-align: middle;">
+								<a href="https://x.com/OFiDKid">
+									<img src="/assets/images/social-logo/IMG_1844.png" alt="X Logo"
+										style="max-width: 35%; height: auto; display: block; margin: auto;">
+								</a>
+							</td>
+							<td style="text-align: center; vertical-align: middle;">
+								<a href="https://x.com/OFiDKid">@OFiDKid</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</section>
 
 				<!-- Quick Start Section -->
 				<section class="quick-start-section" id="meet-crew">
@@ -324,31 +343,6 @@
 						</div>
 					</div>
 				</article>
-
-				<!-- Community Links Table -->
-				<section class="community-links">
-					<table>
-						<!-- Ad Banner -->
-						<section id="expb-ball" class="ad-banner">
-							<div style="text-align: center;">
-								<!-- <a href="#" style="border-bottom: none;"> -->
-									<img src="/assets/images/ofidkid-hoodie-banner-socials.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
-								</a>
-							</div>
-						</section>
-						<tbody>
-							<tr>
-								<td>TikTok</td>
-									<td><a href="https://www.tiktok.com/@ofidkid">@OFiDKid</a></td>
-								</td>
-							</tr>
-							<tr>
-								<td>𝕏</td>
-								<td><a href="https://x.com/OFiDKid">@OFiDKid</a></td>
-							</tr>
-						</tbody>
-					</table>
-				</section>
 
 				<!-- More About The OFiD Crew -->
 				<h2 style="text-align: center;">Merchandise Shop</h2>
