Updated OFiDKid page logo.

--- a/ofidkid.html
+++ b/ofidkid.html
@@ -38,7 +38,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="description" content="Meet The OFiD Crew and dive into their world! Discover their unique stories, thrilling missions, and get ready to join them on their Web3 adventures!">
 	<meta name="keywords" content="cryptocurrency, The OFiD Kid, The OFiD Crew, Buster, Giddy, blockchain, digital assets, OFiDCrypt, crypto community">
-	<meta name="author" content="Tokin ⬢">
+	<meta name="author" content="Tokin">
 
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="OFiDCrypt | Meet The OFiD Kid & Crew">
@@ -90,7 +90,7 @@
 		<!-- Header Subpage-->
 		<header class="header-subpage">
 			<a href="/index.html">
-				<img src="/assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
+				<img src="/assets/images/ofid-kid-logo.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
 
