Formatting changes and layout JS adjustments for better user flow.

--- a/explore.html
+++ b/explore.html
@@ -156,15 +156,14 @@
 				<header class="major">
 					<span class="date">OFiDCrypt Services</span>
 					<h1>Web3 <br /> Discovery</h1>
-					<p>Check out Apps from Leading Innovators in the Web3 Space; or Explore our Library of
-						Knowledge Articles, written and published by OFiDCrypt.</p>
+					<p>Check out Apps from leading innovators in the web3 space; or explore our library of
+						knowledge articles, written and published by OFiDCrypt.</p>
 
 					<!-- Apps & Learn Buttons -->
 					<div class="round-button-container">
 						<button class="round-button"><a href="#apps-list">Explore Apps</a></button>
 						<button class="round-button"><a href="#article-featured">Read Articles</a></button>
 					</div>
-
 
 				</header>
 
