--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -197,19 +197,25 @@
 								</thead>
 							<tbody>
 								<tr id="table-next-event">
-									<td>ID: E𝕏P-002 <br><b><a href="#EXP-002">e𝕏PB Airdrop</a></b></td>
+									<td>ID: E𝕏P-003 <br><b><a href="#EXP-003">e𝕏PB AIRDROP #2</a></b></td>
+									<td>Entries Open: <br><b>TBD</b></td>
+									<td>Entires Close: <br><b>TBD</b></td>
+									<td>Livestream Start: <br><a href="#">TBD</a></td>
+								</tr>
+								<tr id="table-event-3">
+									<td>ID: E𝕏P-002 <br><b><a href="#EXP-002">e𝕏PB AIRDROP</a></b></td>
 									<td>Entries Open: <br><b>2025-Feb-23 at 03:00 PM</b></td>
 									<td>Entires Close: <br><b>2025-Feb-26 at 02:00 PM</b></td>
-									<td>Livestream Start: <br><a href="#latest-event">2025-Feb-26 at 03:00 PM</a></td>
+									<td>Livestream Start: <br><b>2025-Feb-26 at 03:00 PM</b></td>
 								</tr>
-								<tr id="table-event-2">
-									<td>ID: E𝕏P-001 <br><b><a href="#EXP-001">e𝕏PB Launch Event</a></b></td>
+								<tr id="table-event-2"> 
+									<td>ID: E𝕏P-001 <br><b><a href="#EXP-001">e𝕏PB LAUNCH EVENT</a></b></td>
 									<td>Entries Open: <br><b>2025-Jan-24 at 12:00 PM</b></td>
 									<td>Entires Close: <br><b>2025-Jan-29 at 2:00 PM</b></td>
 									<td>Livestream Start: <br><b>2025-Jan-29 at 3:00 PM</b></td>
 								</tr>
-								<tr id="table-event-3">
-									<td>ID: PDA-001 <br><b><a href="#PDA-001">Perk Digital Art</a></b></td>
+								<tr id="table-event-1">
+									<td>ID: PDA-001 <br><b><a href="#PDA-001">PERK DIGITAL ART</a></b></td>
 									<td>Entries Open: <br><b>Cancelled</b></td>
 									<td>Entires Close: <br><b>Cancelled</b></td>
 									<td>Livestream Start: <br><b>Cancelled</b></td>
