--- a/community.html
+++ b/community.html
@@ -160,7 +160,7 @@
 
 					<!-- Bulletins & Social Links Buttons -->
 					<div class="round-button-container">
-						<button class="round-button"><a href="#bulletins">Quick Tips</a></button>
+						<button class="round-button"><a href="#bulletins">Social Tips</a></button>
 						<button class="round-button"><a href="#socials-banner">Chat Spaces</a></button>
 					</div>
 				</header>
@@ -238,7 +238,7 @@
 								<h3>Rewards & Updates in Telegram</h3>
 								<p>Stay in the loop with real-time updates! Earn rewards from trivia or for engaging
 									with our X posts in
-									exciting <b>Raids</b>. It's super simple and fun; connect, share, and reap the
+									exciting <a href="https://x.com/ofidcrypt/status/1896804550440612315?s=46">RAIDS</a>. It's super simple and fun; connect, share, and reap the
 									benefits!</p>
 							</div>
 							<button class="scroll-arrow right" aria-label="Scroll Right"><i
