--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -144,9 +144,10 @@
 			<section class="livestream" id="latest-event">
 				<div class="stream video main">
 					<blockquote class="twitter-tweet" data-media-max-width="1920">
-						<p lang="en" dir="ltr">AIRDROP: Raindrop! Results to be drawn! <a
-								href="https://t.co/fNaZaUGCYm">https://t.co/fNaZaUGCYm</a></p>&mdash; OFiDCrypt e𝕏P Web3™ (@OFiDCrypt)
-						<a href="https://twitter.com/OFiDCrypt/status/1894884342003892385?ref_src=twsrc%5Etfw">February 26, 2025</a>
+						<p lang="en" dir="ltr">AIRDROP! Airshot: Winners announced &amp; OFiDCrypt Updates!<br><br>LIVE in just a few
+							minutes...! <a href="https://t.co/k1uqPsjq62">https://t.co/k1uqPsjq62</a></p>&mdash; OFiDCrypt e𝕏P Web3™
+						(@OFiDCrypt) <a href="https://twitter.com/OFiDCrypt/status/1915164677799371084?ref_src=twsrc%5Etfw">April 23,
+							2025</a>
 					</blockquote>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
