Updated livestream.html with updated broadcast information. Updated Kin Community to ONE Kin community, fixed broken links from /explore layer

--- a/community.html
+++ b/community.html
@@ -157,64 +157,59 @@
 						Latest Socials</h1>
 					<p>Keep up-to-date with what's happening throughout the OFiDCrypt journey; we're working towards
 						global web3 adoption starting in Canada!</p>
-
+			
 					<!-- Bulletins & Social Links Buttons -->
 					<div class="round-button-container">
 						<button class="round-button"><a href="#bulletins">Social Tips</a></button>
 						<button class="round-button"><a href="#socials-banner">Chat Spaces</a></button>
 					</div>
 				</header>
-
-				<!-- X Post Embed: Row 1 HEADING -->
+			
+				<!-- X Post Embed: Row HEADING -->
 				<header>
 					<a href="https://www.ofidcrypt.com/pages/livestream.html#EXP-003">
-						<h2>AIRDROP #2 ANNOUNCED</h2>
+						<h2>App Early Development</h2>
 					</a>
 				</header>
-
-				<!-- X Post Embed: Row 1 Slot 1 -->
+			
+				<!-- X Post Embed: Row Slot 1 -->
 				<div class="x-post-container">
 					<div class="x-post video main">
 						<blockquote class="twitter-tweet">
-							<p lang="en" dir="ltr">REMEMBER THE FIRST AIRDROP? ☔️<br>This is the TRAILER/TEASER for
-								#2!<a
-									href="https://twitter.com/hashtag/BouncyBall?src=hash&amp;ref_src=twsrc%5Etfw">#BouncyBall</a>
-								rewards.. Well, we showed you integrity and delivered before, and now we’re doing it
-								AGAIN—only BIGGER
-								🎊<br><br>SHOTS FIRED:<br>💥 350 guaranteed SOL address deposits<br>💥 Capped bonus
-								eXtra for OFiDKid X
-								&amp;… <a href="https://t.co/6PugH94sWe">pic.twitter.com/6PugH94sWe</a></p>&mdash;
-							OFiDCrypt e𝕏P Web3™
-							(@OFiDCrypt) <a
-								href="https://twitter.com/OFiDCrypt/status/1901173365395853516?ref_src=twsrc%5Etfw">March
-								16, 2025</a>
+							<p lang="en" dir="ltr">We will give EVERYTHING to keep you busy and entertained. Tell your
+								friends!
+								💫<br><br>No
+								clutter. Simple ideas, packaged neatly.<br><br>Hey, it has to be this way for the new
+								people we are
+								introducing!
+								<a href="https://twitter.com/OFiDKid?ref_src=twsrc%5Etfw">@OFiDKid</a> is only just
+								getting
+								started!<br><br>Safe, educational, fun and supporting of others.… <a
+									href="https://t.co/1QBoOKJqkd">https://t.co/1QBoOKJqkd</a> <a
+									href="https://t.co/ybZ8K3JcHo">pic.twitter.com/ybZ8K3JcHo</a>
+							</p>— OFiDCrypt e𝕏P Web3™ (@OFiDCrypt)
+							<a href="https://twitter.com/OFiDCrypt/status/1906266035361403317?ref_src=twsrc%5Etfw">March
+								30, 2025</a>
 						</blockquote>
 					</div>
-
-					<!-- X Post Embed: Row 1 Slot 2 -->
+			
+					<!-- X Post Embed: Row Slot 2 -->
 					<div class="x-post video main">
 						<blockquote class="twitter-tweet">
-							<p lang="en" dir="ltr">Following Airdrop #2; <a
-									href="https://twitter.com/search?q=%24eXPB&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$eXPB</a>
-								will have 500
-								holders! 🚀🚀<br><br>Trailer Video v2 Added! 📹<br><br>Questions about <a
-									href="https://twitter.com/search?q=%24Kin&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$Kin</a>
-								and
-								liquidity?<br><br>Join <a
-									href="https://twitter.com/zsadik64?ref_src=twsrc%5Etfw">@zsadik64</a> in Flipchat
-								#563<br>👉 <a href="https://t.co/ZV82iCdSNg">https://t.co/ZV82iCdSNg</a><br><br>Or
-								OFiDCrypt in Flipchat
-								#350<br>👉 <a href="https://t.co/nfoDbsigch">https://t.co/nfoDbsigch</a><a
-									href="https://twitter.com/Kin_Ecosystem?ref_src=twsrc%5Etfw">@Kin_Ecosystem</a> <a
-									href="https://twitter.com/flipchat_app?ref_src=twsrc%5Etfw">@flipchat_app</a> <a
-									href="https://twitter.com/solana?ref_src=twsrc%5Etfw">@solana</a>… <a
-									href="https://t.co/CSPKAbdT0d">https://t.co/CSPKAbdT0d</a> <a
-									href="https://t.co/iJ5kwsNehl">pic.twitter.com/iJ5kwsNehl</a></p>&mdash; OFiDCrypt
-							e𝕏P Web3™
-							(@OFiDCrypt) <a
-								href="https://twitter.com/OFiDCrypt/status/1901223961155043640?ref_src=twsrc%5Etfw">March
-								16,
-								2025</a>
+							<p lang="en" dir="ltr">OUR VISION: See it 💫<br>PART 2: We will form a post chain of
+								progress 🎊<br><br>Also
+								on
+								TikTok 📹<br>👉 <a href="https://t.co/WhswoMObEm">https://t.co/WhswoMObEm</a><br><br>Follow our
+								development
+								journey through in-house designs and professional collaborations 🙏<br><br>✅ Safe<br>✅
+								Educational<br>✅
+								Fun<br>✅
+								Supporting of others!<br><br>No clutter.… <a
+									href="https://t.co/WaHDLP8SGl">https://t.co/WaHDLP8SGl</a>
+								<a href="https://t.co/FNT2xu9mzC">pic.twitter.com/FNT2xu9mzC</a>
+							</p>— OFiDCrypt e𝕏P Web3™ (@OFiDCrypt)
+							<a href="https://twitter.com/OFiDCrypt/status/1906770834464882997?ref_src=twsrc%5Etfw">March
+								31, 2025</a>
 						</blockquote>
 					</div>
 				</div>
@@ -402,52 +397,56 @@
 					});
 					</script>
 
-				<!-- X Post Embed: Row 2 HEADING -->
+				<!-- X Post Embed: Row 1 HEADING -->
 				<header>
 					<a href="https://www.ofidcrypt.com/pages/livestream.html#EXP-003">
-						<h2>APP CONCEPT</h2>
+						<h2>AIRDROP #2 CONCLUDED</h2>
 					</a>
 				</header>
 
-				<!-- X Post Embed: Row 2 Slot 1 -->
+				<!-- X Post Embed: Row Slot 1 -->
 				<div class="x-post-container">
 					<div class="x-post video main">
 						<blockquote class="twitter-tweet">
-							<p lang="en" dir="ltr">We will give EVERYTHING to keep you busy and entertained. Tell your
-								friends!
-								💫<br><br>No
-								clutter. Simple ideas, packaged neatly.<br><br>Hey, it has to be this way for the new
-								people we are
-								introducing!
-								<a href="https://twitter.com/OFiDKid?ref_src=twsrc%5Etfw">@OFiDKid</a> is only just
-								getting
-								started!<br><br>Safe, educational, fun and supporting of others.… <a
-									href="https://t.co/1QBoOKJqkd">https://t.co/1QBoOKJqkd</a> <a
-									href="https://t.co/ybZ8K3JcHo">pic.twitter.com/ybZ8K3JcHo</a>
-							</p>— OFiDCrypt e𝕏P Web3™ (@OFiDCrypt)
-							<a href="https://twitter.com/OFiDCrypt/status/1906266035361403317?ref_src=twsrc%5Etfw">March
-								30, 2025</a>
+							<p lang="en" dir="ltr">REMEMBER THE FIRST AIRDROP? ☔️<br>This is the TRAILER/TEASER for
+								#2!<a
+									href="https://twitter.com/hashtag/BouncyBall?src=hash&amp;ref_src=twsrc%5Etfw">#BouncyBall</a>
+								rewards.. Well, we showed you integrity and delivered before, and now we’re doing it
+								AGAIN—only BIGGER
+								🎊<br><br>SHOTS FIRED:<br>💥 350 guaranteed SOL address deposits<br>💥 Capped bonus
+								eXtra for OFiDKid X
+								&amp;… <a href="https://t.co/6PugH94sWe">pic.twitter.com/6PugH94sWe</a></p>&mdash;
+							OFiDCrypt e𝕏P Web3™
+							(@OFiDCrypt) <a
+								href="https://twitter.com/OFiDCrypt/status/1901173365395853516?ref_src=twsrc%5Etfw">March
+								16, 2025</a>
 						</blockquote>
 					</div>
 
-					<!-- X Post Embed: Row 2 Slot 2 -->
+					<!-- X Post Embed: Row Slot 2 -->
 					<div class="x-post video main">
 						<blockquote class="twitter-tweet">
-							<p lang="en" dir="ltr">OUR VISION: See it 💫<br>PART 2: We will form a post chain of
-								progress 🎊<br><br>Also
-								on
-								TikTok 📹<br>👉 <a
-									href="https://t.co/WhswoMObEm">https://t.co/WhswoMObEm</a><br><br>Follow our
-								development
-								journey through in-house designs and professional collaborations 🙏<br><br>✅ Safe<br>✅
-								Educational<br>✅
-								Fun<br>✅
-								Supporting of others!<br><br>No clutter.… <a
-									href="https://t.co/WaHDLP8SGl">https://t.co/WaHDLP8SGl</a>
-								<a href="https://t.co/FNT2xu9mzC">pic.twitter.com/FNT2xu9mzC</a>
-							</p>— OFiDCrypt e𝕏P Web3™ (@OFiDCrypt)
-							<a href="https://twitter.com/OFiDCrypt/status/1906770834464882997?ref_src=twsrc%5Etfw">March
-								31, 2025</a>
+							<p lang="en" dir="ltr">Following Airdrop #2; <a
+									href="https://twitter.com/search?q=%24eXPB&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$eXPB</a>
+								will have 500
+								holders! 🚀🚀<br><br>Trailer Video v2 Added! 📹<br><br>Questions about <a
+									href="https://twitter.com/search?q=%24Kin&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$Kin</a>
+								and
+								liquidity?<br><br>Join <a
+									href="https://twitter.com/zsadik64?ref_src=twsrc%5Etfw">@zsadik64</a> in Flipchat
+								#563<br>👉 <a href="https://t.co/ZV82iCdSNg">https://t.co/ZV82iCdSNg</a><br><br>Or
+								OFiDCrypt in Flipchat
+								#350<br>👉 <a href="https://t.co/nfoDbsigch">https://t.co/nfoDbsigch</a><a
+									href="https://twitter.com/Kin_Ecosystem?ref_src=twsrc%5Etfw">@Kin_Ecosystem</a> <a
+									href="https://twitter.com/flipchat_app?ref_src=twsrc%5Etfw">@flipchat_app</a> <a
+									href="https://twitter.com/solana?ref_src=twsrc%5Etfw">@solana</a>… <a
+									href="https://t.co/CSPKAbdT0d">https://t.co/CSPKAbdT0d</a> <a
+									href="https://t.co/iJ5kwsNehl">pic.twitter.com/iJ5kwsNehl</a></p>&mdash; OFiDCrypt
+							e𝕏P Web3™
+							(@OFiDCrypt) <a
+								href="https://twitter.com/OFiDCrypt/status/1901223961155043640?ref_src=twsrc%5Etfw">March
+								16,
+								2025</a>
 						</blockquote>
 					</div>
 				</div>
