--- a/explore/app-featured-hvr.html
+++ b/explore/app-featured-hvr.html
@@ -110,9 +110,9 @@
 					<li><a href="../index.html">Home</a></li>
 					<li class="active"><a href="../explore.html">Explore</a></li>
 					<li><a href="../community.html">Community</a></li>
-					<li><a href="livestream.html">e𝕏P Streams™</a></li>
+					<li><a href="../pages/livestream.html">e𝕏P Streams™</a></li>
 					<li><a href="../ofidkid.html">The OFiD Kid</a></li>
-					<li><a href="about.html">About</a></li>
+					<li><a href="../pages/about.html">About</a></li>
 				</ul>
 				<ul class="icons">
 					<li>
@@ -296,8 +296,8 @@
 			<ul>
 				<li><a href="../community.html">Community</a></li>
 				<li><a href="../docs/main.html">Docs</a></li>
-				<li><a href="affiliate.html">Partners</a></li>
-				<li><a href="about.html">About</a></li>
+				<li><a href="../pages/affiliate.html">Partners</a></li>
+				<li><a href="../pages/about.html">About</a></li>
 			</ul>
 			<ul>
 				<ul>
