--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -182,10 +182,10 @@
 						<div class="product-wrapper">
 							<div class="product-content">
 								<a href="../kincommunity.html">
-									<span class="image right affiliate"><img src="../assets/images/logokin02.jpg"
+									<span class="image right affiliate"><img src="../assets/images/ONEKin.jpg"
 											alt="Kin On Solana Logo Image"></span>
 								</a>
-								<h3 style="text-align: center;">The Kin Community</h3>
+								<h3 style="text-align: center;">ONE Kin Community</h3>
 								<!-- Partner Nav Button 2 -->
 								<div style="text-align: center;">
 									<button class="button"><a href="../kincommunity.html">Visit Page</a></button>
@@ -201,7 +201,7 @@
 						</div>
 					</article>
 
-					<!-- Product 3 -->
+					<!-- Product 3 
 					<article class="product-section">
 						<div class="product-wrapper">
 							<div class="product-content">
@@ -209,7 +209,9 @@
 									<span class="image left affiliate"><img src="../assets/images/logocode01.jpg" alt="Code Wallet Logo"></span>
 								</a>
 								<h3 style="text-align: center;">Code Wallet | Take Control of Your Money</h3>
-								<!-- Partner Nav Button 3 -->
+								-->
+
+								<!-- Partner Nav Button 3
 								<div style="text-align: center;">
 									<button class="button"><a href="vipwithcode.html">Explore Code</a></button>
 								</div>
@@ -221,6 +223,7 @@
 							</div>
 						</div>
 					</article>
+					 -->
 
 					<!-- Page Button Style -->
 					<style>
