--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -173,7 +173,7 @@
 					<header class="major">
 						<h1 id="livestream-title">𝕏 Livestream</h1>
 						<!-- Section Description -->
-						<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1ypKdZVpgOLJW">Aired on 𝕏 Feb-26-2025, 3:00 PM
+						<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1yoKMorEYbdJQ">Aired on 𝕏 Apr-23-2025, 3:00 PM
 								PST</a></p>
 						<p class="align-center">All times are in the <b>Pacific Time Zone (PST)</b>
 							which is UTC-8:00 (or UTC-7:00 during daylight saving time).</p>
@@ -199,15 +199,15 @@
 							<tbody>
 								<tr id="table-next-event">
 									<td>ID: E𝕏P-003 <br><b><a href="#EXP-003">e𝕏PB AIRDROP #2</a></b></td>
-									<td>Entries Open: <br><b>TBD</b></td>
-									<td>Entires Close: <br><b>TBD</b></td>
-									<td>Livestream Start: <br><a href="#">TBD</a></td>
+									<td>Entries Open: <br><b>2025-Apr-17 at 3:00 PM</b></td>
+									<td>Entires Close: <br><b>2025-Apr-23 at 2:00 PM</b></td>
+									<td>Livestream Start: <br><a href="#latest-event">2025-Apr-23 at 3:00 PM</a></td>
 								</tr>
 								<tr id="table-event-3">
 									<td>ID: E𝕏P-002 <br><b><a href="#EXP-002">e𝕏PB AIRDROP</a></b></td>
-									<td>Entries Open: <br><b>2025-Feb-23 at 03:00 PM</b></td>
-									<td>Entires Close: <br><b>2025-Feb-26 at 02:00 PM</b></td>
-									<td>Livestream Start: <br><b>2025-Feb-26 at 03:00 PM</b></td>
+									<td>Entries Open: <br><b>2025-Feb-23 at 3:00 PM</b></td>
+									<td>Entires Close: <br><b>2025-Feb-26 at 2:00 PM</b></td>
+									<td>Livestream Start: <br><b>2025-Feb-26 at 3:00 PM</b></td>
 								</tr>
 								<tr id="table-event-2"> 
 									<td>ID: E𝕏P-001 <br><b><a href="#EXP-001">e𝕏PB LAUNCH EVENT</a></b></td>
@@ -245,13 +245,24 @@
 											<span class="date">EXP-003 e𝕏P WEB3™<br />
 												<a href="#event-4-desc">More Details</a></span>
 				
-											<h1><a href="#table-event-4">Airdrop #2: Giveaway &<br />
+											<h1><a href="#table-next-event">Airdrop #2: Giveaway &<br />
 													OfiD Updates</a></h1>
 										</header>
+									<!--
 										<div class="stream video main">
 											<img src="/assets/images/airdrop2-kin.PNG" alt="AIRDROP #2: Results to be drawn!" 
 												 style="max-width: 100%; height: auto;">
 										</div>
+									-->
+									<div class="stream video main">
+										<blockquote class="twitter-tweet" data-media-max-width="1920">
+											<p lang="en" dir="ltr">AIRDROP! Airshot: Winners announced &amp; OFiDCrypt Updates!<br><br>LIVE in just a few
+												minutes...! <a href="https://t.co/k1uqPsjq62">https://t.co/k1uqPsjq62</a></p>&mdash; OFiDCrypt e𝕏P Web3™
+											(@OFiDCrypt) <a href="https://twitter.com/OFiDCrypt/status/1915164677799371084?ref_src=twsrc%5Etfw">April 23,
+												2025</a>
+										</blockquote>
+									</div>
+
 										<p id="event-4-desc">
 											Get ready for the next big thing—AIRDROP #2! Following the success of our first event, we're coming back even bigger
 											and better! This upcoming airdrop promises 350 guaranteed SOL address deposits, exclusive bonus rewards for OFiDKid
@@ -261,8 +272,8 @@
 												href="https://x.com/OFiDCrypt/status/1901173365395853516">Announced on 𝕏</a> 📣 STAY TUNED for the event!</p>
 
 										<ul class="actions special">
-											<li><a href="https://x.com/OFiDCrypt/status/1901173365395853516"
-													class="button">Up Next</a></li>
+											<li><a href="https://twitter.com/OFiDCrypt/status/1915164677799371084?ref_src=twsrc%5Etfw"
+													class="button">Watch on 𝕏</a></li>
 										</ul>
 									</article>
 							</div>
@@ -291,7 +302,7 @@
 												<a href="https://twitter.com/OFiDCrypt/status/1894884342003892385?ref_src=twsrc%5Etfw">February
 													26, 2025</a>
 											</blockquote>
-											<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 										</div>
 										<p id="event-3-desc">The OFiDCrypt community hosts this exciting event to spotlight their "RAINDROP" airdrop of 1
 											million e𝕏PB. Designed to make Web3 apps approachable and rewarding, participants are encouraged to engage through
@@ -330,7 +341,7 @@
 													href="https://twitter.com/OFiDCrypt/status/1884738784501047782?ref_src=twsrc%5Etfw">January
 													29, 2025</a>
 											</blockquote>
-											<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 										</div>
 										<p id="event-2-desc">Join us to learn more about what we do! Explore Web3 apps for business and
 											social utility, and get rewarded with e𝕏P
